@@ -9,7 +9,8 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 12/06/13 Daniel K. O.
-        * Applied patch #181 to fix some bugs in AMotor.
+        * Applied patch #181 to fix some bugs in AMotor joint.
+        * Applied patch #186 to fix some bugs in PU joint. 
 
 08/08/13 Oleh Derevenko
         * Joint feedback forces application fixed in QuickStep implementation
